--- a/categories/dialogue/_posts/2021-07-07-dialogue.md
+++ b/categories/dialogue/_posts/2021-07-07-dialogue.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-07-02*
+*written on 2021-07-16*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [A Survey on Dialogue Summarization: Recent Advances and New Frontiers](http://arxiv.org/abs/2107.03175v1) | Xiachong Feng, Xiaocheng Feng, Bing Qin | cs.CL | 2021-07-07 |
 | [Do Encoder Representations of Generative Dialogue Models Encode  Sufficient Information about the Task ?](http://arxiv.org/abs/2106.10622v1) | Prasanna Parthasarathi, Joelle Pineau, Sarath Chandar | cs.CL | 2021-06-20 |
 | [Local Explanation of Dialogue Response Generation](http://arxiv.org/abs/2106.06528v1) | Yi-Lin Tuan, Connor Pryor, Wenhu Chen, Lise Getoor, William Yang Wang | cs.CL, stat.ML | 2021-06-11 |
 | [AUGNLG: Few-shot Natural Language Generation using Self-trained Data  Augmentation](http://arxiv.org/abs/2106.05589v1) | Xinnuo Xu, Guoyin Wang, Young-Bum Kim, Sungjin Lee | cs.CL | 2021-06-10 |
