--- a/categories/image2text/_posts/2021-07-15-image2text.md
+++ b/categories/image2text/_posts/2021-07-15-image2text.md
@@ -6,10 +6,15 @@ sidebar:
 ---
 
 
-*written on 2021-07-02*
+*written on 2021-07-16*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Robust Learning for Text Classification with Multi-source Noise  Simulation and Hard Example Mining](http://arxiv.org/abs/2107.07113v1) | Guowei Xu, Wenbiao Ding, Weiping Fu, Zhongqin Wu, Zitao Liu | cs.CL, cs.AI | 2021-07-15 |
+| [From Show to Tell: A Survey on Image Captioning](http://arxiv.org/abs/2107.06912v1) | Matteo Stefanini, Marcella Cornia, Lorenzo Baraldi, Silvia Cascianelli, Giuseppe Fiameni, Rita Cucchiara | cs.CV, cs.CL | 2021-07-14 |
+| [Between Flexibility and Consistency: Joint Generation of Captions and  Subtitles](http://arxiv.org/abs/2107.06246v1) | Alina Karakanta, Marco Gaido, Matteo Negri, Marco Turchi | cs.CL | 2021-07-13 |
+| [Tortured phrases: A dubious writing style emerging in science. Evidence  of critical issues affecting established journals](http://arxiv.org/abs/2107.06751v1) | Guillaume Cabanac, Cyril Labbé, Alexander Magazinov | cs.DL, cs.CL, cs.CY, cs.IR | 2021-07-12 |
+| [Structured Denoising Diffusion Models in Discrete State-Spaces](http://arxiv.org/abs/2107.03006v2) | Jacob Austin, Daniel D. Johnson, Jonathan Ho, Daniel Tarlow, Rianne van den Berg | cs.LG, cs.AI, cs.CL, cs.CV | 2021-07-07 |
 | [Don't Take It Literally: An Edit-Invariant Sequence Loss for Text  Generation](http://arxiv.org/abs/2106.15078v1) | Guangyi Liu, Zichao Yang, Tianhua Tao, Xiaodan Liang, Zhen Li, Bowen Zhou, Shuguang Cui, Zhiting Hu | cs.CL, cs.AI | 2021-06-29 |
 | [UMIC: An Unreferenced Metric for Image Captioning via Contrastive  Learning](http://arxiv.org/abs/2106.14019v1) | Hwanhee Lee, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, Kyomin Jung | cs.CL, cs.CV | 2021-06-26 |
 | [ImaginE: An Imagination-Based Automatic Evaluation Metric for Natural  Language Generation](http://arxiv.org/abs/2106.05970v1) | Wanrong Zhu, Xin Eric Wang, An Yan, Miguel Eckstein, William Yang Wang | cs.CL, cs.AI, cs.CV | 2021-06-10 |
