--- a/categories/table2text/_posts/2021-07-15-table2text.md
+++ b/categories/table2text/_posts/2021-07-15-table2text.md
@@ -6,10 +6,17 @@ sidebar:
 ---
 
 
-*written on 2021-07-02*
+*written on 2021-07-16*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Robust Learning for Text Classification with Multi-source Noise  Simulation and Hard Example Mining](http://arxiv.org/abs/2107.07113v1) | Guowei Xu, Wenbiao Ding, Weiping Fu, Zhongqin Wu, Zitao Liu | cs.CL, cs.AI | 2021-07-15 |
+| [From Machine Translation to Code-Switching: Generating High-Quality  Code-Switched Text](http://arxiv.org/abs/2107.06483v1) | Ishan Tarunesh, Syamantak Kumar, Preethi Jyothi | cs.CL | 2021-07-14 |
+| [Direct speech-to-speech translation with discrete units](http://arxiv.org/abs/2107.05604v1) | Ann Lee, Peng-Jen Chen, Changhan Wang, Jiatao Gu, Xutai Ma, Adam Polyak, Yossi Adi, Qing He, Yun Tang, Juan Pino, Wei-Ning Hsu | cs.CL, cs.LG, eess.AS | 2021-07-12 |
+| [HinGE: A Dataset for Generation and Evaluation of Code-Mixed Hinglish  Text](http://arxiv.org/abs/2107.03760v1) | Vivek Srivastava, Mayank Singh | cs.CL | 2021-07-08 |
+| [On Training Instance Selection for Few-Shot Neural Text Generation](http://arxiv.org/abs/2107.03176v1) | Ernie Chang, Xiaoyu Shen, Hui-Syuan Yeh, Vera Demberg | cs.CL, cs.LG | 2021-07-07 |
+| [Structured Denoising Diffusion Models in Discrete State-Spaces](http://arxiv.org/abs/2107.03006v2) | Jacob Austin, Daniel D. Johnson, Jonathan Ho, Daniel Tarlow, Rianne van den Berg | cs.LG, cs.AI, cs.CL, cs.CV | 2021-07-07 |
+| [Scarecrow: A Framework for Scrutinizing Machine Text](http://arxiv.org/abs/2107.01294v2) | Yao Dou, Maxwell Forbes, Rik Koncel-Kedziorski, Noah A. Smith, Yejin Choi | cs.CL | 2021-07-02 |
 | [Topic-to-Essay Generation with Comprehensive Knowledge Enhancement](http://arxiv.org/abs/2106.15142v1) | Zhiyue Liu, Jiahai Wang, Zhenghong Li | cs.CL | 2021-06-29 |
 | [DeltaLM: Encoder-Decoder Pre-training for Language Generation and  Translation by Augmenting Pretrained Multilingual Encoders](http://arxiv.org/abs/2106.13736v1) | Shuming Ma, Li Dong, Shaohan Huang, Dongdong Zhang, Alexandre Muzio, Saksham Singhal, Hany Hassan Awadalla, Xia Song, Furu Wei | cs.CL | 2021-06-25 |
 | [Membership Inference on Word Embedding and Beyond](http://arxiv.org/abs/2106.11384v1) | Saeed Mahloujifar, Huseyin A. Inan, Melissa Chase, Esha Ghosh, Marcello Hasegawa | cs.CL, cs.AI, cs.CR, cs.LG | 2021-06-21 |
