--- a/categories/story/_posts/2021-07-08-story.md
+++ b/categories/story/_posts/2021-07-08-story.md
@@ -6,10 +6,13 @@ sidebar:
 ---
 
 
-*written on 2021-07-02*
+*written on 2021-07-16*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Inspiration through Observation: Demonstrating the Influence of  Automatically Generated Text on Creative Writing](http://arxiv.org/abs/2107.04007v1) | Melissa Roemmele | cs.CL, cs.AI, cs.HC | 2021-07-08 |
+| [Improving Coherence and Consistency in Neural Sequence Models with  Dual-System, Neuro-Symbolic Reasoning](http://arxiv.org/abs/2107.02794v1) | Maxwell Nye, Michael Henry Tessler, Joshua B. Tenenbaum, Brenden M. Lake | cs.AI, cs.CL, cs.LG | 2021-07-06 |
+| [Scarecrow: A Framework for Scrutinizing Machine Text](http://arxiv.org/abs/2107.01294v2) | Yao Dou, Maxwell Forbes, Rik Koncel-Kedziorski, Noah A. Smith, Yejin Choi | cs.CL | 2021-07-02 |
 | [All That's 'Human' Is Not Gold: Evaluating Human Evaluation of Generated  Text](http://arxiv.org/abs/2107.00061v1) | Elizabeth Clark, Tal August, Sofia Serrano, Nikita Haduong, Suchin Gururangan, Noah A. Smith | cs.CL | 2021-06-30 |
 | [Graph-based Trajectory Visualization for Text Mining of COVID-19  Biomedical Literature](http://arxiv.org/abs/2106.07374v1) | Yeseul Jeon, Dongjun Chung, Jina Park, Ick Hoon Jin | cs.IR, stat.AP | 2021-06-07 |
 | [Long Text Generation by Modeling Sentence-Level and Discourse-Level  Coherence](http://arxiv.org/abs/2105.08963v1) | Jian Guan, Xiaoxi Mao, Changjie Fan, Zitao Liu, Wenbiao Ding, Minlie Huang | cs.CL | 2021-05-19 |
