--- a/categories/dialogue/_posts/2021-07-15-dialogue.md
+++ b/categories/dialogue/_posts/2021-07-15-dialogue.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-07-16*
+*written on 2021-07-26*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Internet-Augmented Dialogue Generation](http://arxiv.org/abs/2107.07566v1) | Mojtaba Komeili, Kurt Shuster, Jason Weston | cs.AI, cs.CL | 2021-07-15 |
 | [A Survey on Dialogue Summarization: Recent Advances and New Frontiers](http://arxiv.org/abs/2107.03175v1) | Xiachong Feng, Xiaocheng Feng, Bing Qin | cs.CL | 2021-07-07 |
 | [Do Encoder Representations of Generative Dialogue Models Encode  Sufficient Information about the Task ?](http://arxiv.org/abs/2106.10622v1) | Prasanna Parthasarathi, Joelle Pineau, Sarath Chandar | cs.CL | 2021-06-20 |
 | [Local Explanation of Dialogue Response Generation](http://arxiv.org/abs/2106.06528v1) | Yi-Lin Tuan, Connor Pryor, Wenhu Chen, Lise Getoor, William Yang Wang | cs.CL, stat.ML | 2021-06-11 |
