--- a/categories/image2text/_posts/2021-08-04-image2text.md
+++ b/categories/image2text/_posts/2021-08-04-image2text.md
@@ -6,10 +6,13 @@ sidebar:
 ---
 
 
-*written on 2021-07-16*
+*written on 2021-08-09*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [ICECAP: Information Concentrated Entity-aware Image Captioning](http://arxiv.org/abs/2108.02050v1) | Anwen Hu, Shizhe Chen, Qin Jin | cs.CV, cs.MM | 2021-08-04 |
+| [Exploiting BERT For Multimodal Target Sentiment Classification Through  Input Space Translation](http://arxiv.org/abs/2108.01682v2) | Zaid Khan, Yun Fu | cs.CL, cs.CV | 2021-08-03 |
+| [Logic-Consistency Text Generation from Semantic Parses](http://arxiv.org/abs/2108.00577v1) | Chang Shu, Yusen Zhang, Xiangyu Dong, Peng Shi, Tao Yu, Rui Zhang | cs.CL | 2021-08-02 |
 | [Robust Learning for Text Classification with Multi-source Noise  Simulation and Hard Example Mining](http://arxiv.org/abs/2107.07113v1) | Guowei Xu, Wenbiao Ding, Weiping Fu, Zhongqin Wu, Zitao Liu | cs.CL, cs.AI | 2021-07-15 |
 | [From Show to Tell: A Survey on Image Captioning](http://arxiv.org/abs/2107.06912v1) | Matteo Stefanini, Marcella Cornia, Lorenzo Baraldi, Silvia Cascianelli, Giuseppe Fiameni, Rita Cucchiara | cs.CV, cs.CL | 2021-07-14 |
 | [Between Flexibility and Consistency: Joint Generation of Captions and  Subtitles](http://arxiv.org/abs/2107.06246v1) | Alina Karakanta, Marco Gaido, Matteo Negri, Marco Turchi | cs.CL | 2021-07-13 |
