--- a/categories/table2text/_posts/2021-08-04-table2text.md
+++ b/categories/table2text/_posts/2021-08-04-table2text.md
@@ -6,10 +6,14 @@ sidebar:
 ---
 
 
-*written on 2021-07-26*
+*written on 2021-08-09*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Controlled Text Generation as Continuous Optimization with Multiple  Constraints](http://arxiv.org/abs/2108.01850v1) | Sachin Kumar, Eric Malmi, Aliaksei Severyn, Yulia Tsvetkov | cs.CL | 2021-08-04 |
+| [Exploiting BERT For Multimodal Target Sentiment Classification Through  Input Space Translation](http://arxiv.org/abs/2108.01682v2) | Zaid Khan, Yun Fu | cs.CL, cs.CV | 2021-08-03 |
+| [Logic-Consistency Text Generation from Semantic Parses](http://arxiv.org/abs/2108.00577v1) | Chang Shu, Yusen Zhang, Xiangyu Dong, Peng Shi, Tao Yu, Rui Zhang | cs.CL | 2021-08-02 |
+| [Neural Rule-Execution Tracking Machine For Transformer-Based Text  Generation](http://arxiv.org/abs/2107.13077v1) | Yufei Wang, Can Xu, Huang Hu, Chongyang Tao, Stephen Wan, Mark Dras, Mark Johnson, Daxin Jiang | cs.CL | 2021-07-27 |
 | [WikiGraphs: A Wikipedia Text - Knowledge Graph Paired Dataset](http://arxiv.org/abs/2107.09556v1) | Luyu Wang, Yujia Li, Ozlem Aslan, Oriol Vinyals | cs.CL, cs.AI | 2021-07-20 |
 | [Generative Pretraining for Paraphrase Evaluation](http://arxiv.org/abs/2107.08251v1) | Jack Weston, Raphael Lenain, Udeepa Meepegama, Emil Fristed | cs.CL, cs.LG | 2021-07-17 |
 | [Robust Learning for Text Classification with Multi-source Noise  Simulation and Hard Example Mining](http://arxiv.org/abs/2107.07113v1) | Guowei Xu, Wenbiao Ding, Weiping Fu, Zhongqin Wu, Zitao Liu | cs.CL, cs.AI | 2021-07-15 |
