--- a/categories/story/_posts/2021-08-06-story.md
+++ b/categories/story/_posts/2021-08-06-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-07-16*
+*written on 2021-08-09*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Sentence Semantic Regression for Text Generation](http://arxiv.org/abs/2108.02984v1) | Wei Wang, Piji Li, Hai-Tao Zheng | cs.CL | 2021-08-06 |
 | [Inspiration through Observation: Demonstrating the Influence of  Automatically Generated Text on Creative Writing](http://arxiv.org/abs/2107.04007v1) | Melissa Roemmele | cs.CL, cs.AI, cs.HC | 2021-07-08 |
 | [Improving Coherence and Consistency in Neural Sequence Models with  Dual-System, Neuro-Symbolic Reasoning](http://arxiv.org/abs/2107.02794v1) | Maxwell Nye, Michael Henry Tessler, Joshua B. Tenenbaum, Brenden M. Lake | cs.AI, cs.CL, cs.LG | 2021-07-06 |
 | [Scarecrow: A Framework for Scrutinizing Machine Text](http://arxiv.org/abs/2107.01294v2) | Yao Dou, Maxwell Forbes, Rik Koncel-Kedziorski, Noah A. Smith, Yejin Choi | cs.CL | 2021-07-02 |
