scrape on aug 26

--- a/categories/dialogue/_posts/2021-08-25-dialogue.md
+++ b/categories/dialogue/_posts/2021-08-25-dialogue.md
@@ -6,10 +6,15 @@ sidebar:
 ---
 
 
-*written on 2021-08-09*
+*written on 2021-08-26*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Viola: A Topic Agnostic Generate-and-Rank Dialogue System](http://arxiv.org/abs/2108.11063v1) | Hyundong Cho, Basel Shbita, Kartik Shenoy, Shuai Liu, Nikhil Patel, Hitesh Pindikanti, Jennifer Lee, Jonathan May | cs.CL | 2021-08-25 |
+| [Using BERT Encoding and Sentence-Level Language Model for Sentence  Ordering](http://arxiv.org/abs/2108.10986v1) | Melika Golestani, Seyedeh Zahra Razavi, Zeinab Borhanifard, Farnaz Tahmasebian, Hesham Faili | cs.CL | 2021-08-24 |
+| [Taming the Beast: Learning to Control Neural Conversational Models](http://arxiv.org/abs/2108.10561v1) | Andrea Madotto | cs.CL, cs.AI, cs.LG | 2021-08-24 |
+| [CGEMs: A Metric Model for Automatic Code Generation using GPT-3](http://arxiv.org/abs/2108.10168v1) | Aishwarya Narasimhan, Krishna Prasad Agara Venkatesha Rao, Veena M B | cs.AI | 2021-08-23 |
+| [A Neural Conversation Generation Model via Equivalent Shared Memory  Investigation](http://arxiv.org/abs/2108.09164v1) | Changzhen Ji, Yating Zhang, Xiaozhong Liu, Adam Jatowt, Changlong Sun, Conghui Zhu, Tiejun Zhao | cs.CL | 2021-08-20 |
 | [Sentence Semantic Regression for Text Generation](http://arxiv.org/abs/2108.02984v1) | Wei Wang, Piji Li, Hai-Tao Zheng | cs.CL | 2021-08-06 |
 | [Internet-Augmented Dialogue Generation](http://arxiv.org/abs/2107.07566v1) | Mojtaba Komeili, Kurt Shuster, Jason Weston | cs.AI, cs.CL | 2021-07-15 |
 | [A Survey on Dialogue Summarization: Recent Advances and New Frontiers](http://arxiv.org/abs/2107.03175v1) | Xiachong Feng, Xiaocheng Feng, Bing Qin | cs.CL | 2021-07-07 |
