update on sept 13

--- a/categories/dialogue/_posts/2021-09-10-dialogue.md
+++ b/categories/dialogue/_posts/2021-09-10-dialogue.md
@@ -6,10 +6,17 @@ sidebar:
 ---
 
 
-*written on 2021-08-26*
+*written on 2021-09-13*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Generating Self-Contained and Summary-Centric Question Answer Pairs via  Differentiable Reward Imitation Learning](http://arxiv.org/abs/2109.04689v1) | Li Zhou, Kevin Small, Yong Zhang, Sandeep Atluri | cs.CL, cs.AI, cs.LG | 2021-09-10 |
+| [Hi, my name is Martha: Using names to measure and mitigate bias in  generative dialogue models](http://arxiv.org/abs/2109.03300v1) | Eric Michael Smith, Adina Williams | cs.CL | 2021-09-07 |
+| [Naturalness Evaluation of Natural Language Generation in Task-oriented  Dialogues using BERT](http://arxiv.org/abs/2109.02938v1) | Ye Liu, Wolfgang Maier, Wolfgang Minker, Stefan Ultes | cs.CL, cs.AI | 2021-09-07 |
+| [SideControl: Controlled Open-domain Dialogue Generation via Additive  Side Networks](http://arxiv.org/abs/2109.01958v1) | Wanyu Du, Yangfeng Ji | cs.CL | 2021-09-05 |
+| [Task-Oriented Dialogue System as Natural Language Generation](http://arxiv.org/abs/2108.13679v2) | Weizhi Wang, Zhirui Zhang, Junliang Guo, Yinpei Dai, Boxing Chen, Weihua Luo | cs.CL, cs.AI | 2021-08-31 |
+| [Semantic-based Self-Critical Training For Question Generation](http://arxiv.org/abs/2108.12026v1) | Loïc, Kwate Dassi | cs.CL, cs.AI | 2021-08-26 |
+| [Just Say No: Analyzing the Stance of Neural Dialogue Generation in  Offensive Contexts](http://arxiv.org/abs/2108.11830v1) | Ashutosh Baheti, Maarten Sap, Alan Ritter, Mark Riedl | cs.CL | 2021-08-26 |
 | [Viola: A Topic Agnostic Generate-and-Rank Dialogue System](http://arxiv.org/abs/2108.11063v1) | Hyundong Cho, Basel Shbita, Kartik Shenoy, Shuai Liu, Nikhil Patel, Hitesh Pindikanti, Jennifer Lee, Jonathan May | cs.CL | 2021-08-25 |
 | [Using BERT Encoding and Sentence-Level Language Model for Sentence  Ordering](http://arxiv.org/abs/2108.10986v1) | Melika Golestani, Seyedeh Zahra Razavi, Zeinab Borhanifard, Farnaz Tahmasebian, Hesham Faili | cs.CL | 2021-08-24 |
 | [Taming the Beast: Learning to Control Neural Conversational Models](http://arxiv.org/abs/2108.10561v1) | Andrea Madotto | cs.CL, cs.AI, cs.LG | 2021-08-24 |
