--- a/categories/image2text/_posts/2021-09-08-image2text.md
+++ b/categories/image2text/_posts/2021-09-08-image2text.md
@@ -6,10 +6,15 @@ sidebar:
 ---
 
 
-*written on 2021-08-26*
+*written on 2021-09-13*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Retrieve, Caption, Generate: Visual Grounding for Enhancing Commonsense  in Text Generation Models](http://arxiv.org/abs/2109.03892v1) | Steven Y. Feng, Kevin Lu, Zhuofu Tao, Malihe Alikhani, Teruko Mitamura, Eduard Hovy, Varun Gangal | cs.CL, cs.AI, cs.LG | 2021-09-08 |
+| [Sequence Level Contrastive Learning for Text Summarization](http://arxiv.org/abs/2109.03481v1) | Shusheng Xu, Xingxing Zhang, Yi Wu, Furu Wei | cs.CL | 2021-09-08 |
+| [Multimodal Conditionality for Natural Language Generation](http://arxiv.org/abs/2109.01229v1) | Michael Sollami, Aashish Jain | cs.CL, cs.LG | 2021-09-02 |
+| [Goal-driven text descriptions for images](http://arxiv.org/abs/2108.12575v1) | Ruotian Luo | cs.CV, cs.CL | 2021-08-28 |
+| [Automatic Text Evaluation through the Lens of Wasserstein Barycenters](http://arxiv.org/abs/2108.12463v2) | Pierre Colombo, Guillaume Staerman, Chloe Clavel, Pablo Piantanida | cs.CL, cs.AI | 2021-08-27 |
 | [CGEMs: A Metric Model for Automatic Code Generation using GPT-3](http://arxiv.org/abs/2108.10168v1) | Aishwarya Narasimhan, Krishna Prasad Agara Venkatesha Rao, Veena M B | cs.AI | 2021-08-23 |
 | [Group-based Distinctive Image Captioning with Memory Attention](http://arxiv.org/abs/2108.09151v1) | Jiuniu Wang, Wenjia Xu, Qingzhong Wang, Antoni B. Chan | cs.CV, cs.CL, cs.LG | 2021-08-20 |
 | [CIGLI: Conditional Image Generation from Language & Image](http://arxiv.org/abs/2108.08955v1) | Xiaopeng Lu, Lynnette Ng, Jared Fernandez, Hao Zhu | cs.CV, cs.CL | 2021-08-20 |
