--- a/categories/dialogue/_posts/2021-09-27-dialogue.md
+++ b/categories/dialogue/_posts/2021-09-27-dialogue.md
@@ -6,10 +6,17 @@ sidebar:
 ---
 
 
-*written on 2021-09-13*
+*written on 2021-09-30*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [OpenViDial 2.0: A Larger-Scale, Open-Domain Dialogue Generation Dataset  with Visual Contexts](http://arxiv.org/abs/2109.12761v2) | Shuhe Wang, Yuxian Meng, Xiaoya Li, Xiaofei Sun, Rongbin Ouyang, Jiwei Li | cs.CL | 2021-09-27 |
+| [An animated picture says at least a thousand words: Selecting Gif-based  Replies in Multimodal Dialog](http://arxiv.org/abs/2109.12212v1) | Xingyao Wang, David Jurgens | cs.CL, cs.CV, cs.CY | 2021-09-24 |
+| [Style Control for Schema-Guided Natural Language Generation](http://arxiv.org/abs/2109.12211v1) | Alicia Y. Tsai, Shereen Oraby, Vittorio Perera, Jiun-Yu Kao, Yuheng Du, Anjali Narayan-Chen, Tagyoung Chung, Dilek Hakkani-Tur | cs.CL | 2021-09-24 |
+| [Controllable Dialogue Generation with Disentangled Multi-grained Style  Specification and Attribute Consistency Reward](http://arxiv.org/abs/2109.06717v1) | Zhe Hu, Zhiwei Cao, Hou Pong Chan, Jiachen Liu, Xinyan Xiao, Jinsong Su, Hua Wu | cs.CL, cs.AI | 2021-09-14 |
+| [End-to-End Conversational Search for Online Shopping with Utterance  Transfer](http://arxiv.org/abs/2109.05460v1) | Liqiang Xiao, Jun Ma2, Xin Luna Dong, Pascual Martinez-Gomez, Nasser Zalmout, Wei Chen, Tong Zhao, Hao He, Yaohui Jin | cs.CL, cs.AI | 2021-09-12 |
+| [Zero-Shot Text-to-Speech for Text-Based Insertion in Audio Narration](http://arxiv.org/abs/2109.05426v1) | Chuanxin Tang, Chong Luo, Zhiyuan Zhao, Dacheng Yin, Yucheng Zhao, Wenjun Zeng | cs.SD, cs.AI, eess.AS | 2021-09-12 |
+| [Refocusing on Relevance: Personalization in NLG](http://arxiv.org/abs/2109.05140v1) | Shiran Dudy, Steven Bedrick, Bonnie Webber | cs.CL, cs.CY, cs.HC | 2021-09-10 |
 | [Generating Self-Contained and Summary-Centric Question Answer Pairs via  Differentiable Reward Imitation Learning](http://arxiv.org/abs/2109.04689v1) | Li Zhou, Kevin Small, Yong Zhang, Sandeep Atluri | cs.CL, cs.AI, cs.LG | 2021-09-10 |
 | [Hi, my name is Martha: Using names to measure and mitigate bias in  generative dialogue models](http://arxiv.org/abs/2109.03300v1) | Eric Michael Smith, Adina Williams | cs.CL | 2021-09-07 |
 | [Naturalness Evaluation of Natural Language Generation in Task-oriented  Dialogues using BERT](http://arxiv.org/abs/2109.02938v1) | Ye Liu, Wolfgang Maier, Wolfgang Minker, Stefan Ultes | cs.CL, cs.AI | 2021-09-07 |
