--- a/categories/poetry/_posts/2021-09-14-poetry.md
+++ b/categories/poetry/_posts/2021-09-14-poetry.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-09-13*
+*written on 2021-09-30*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [The Perils of Using Mechanical Turk to Evaluate Open-Ended Text  Generation](http://arxiv.org/abs/2109.06835v1) | Marzena Karpinska, Nader Akoury, Mohit Iyyer | cs.CL | 2021-09-14 |
 | [Lingxi: A Diversity-aware Chinese Modern Poetry Generation System](http://arxiv.org/abs/2108.12108v1) | Xinran Zhang, Maosong Sun, Jiafeng Liu, Xiaobing Li | cs.CL | 2021-08-27 |
 | [Urdu & Hindi Poetry Generation using Neural Networks](http://arxiv.org/abs/2107.14587v1) | Shakeeb A. M. Mukhtar, Pushkar S. Joglekar | cs.CL, cs.LG | 2021-07-16 |
 | [FUDGE: Controlled Text Generation With Future Discriminators](http://arxiv.org/abs/2104.05218v1) | Kevin Yang, Dan Klein | cs.CL, cs.LG | 2021-04-12 |
