--- a/categories/table2text/_posts/2021-09-27-table2text.md
+++ b/categories/table2text/_posts/2021-09-27-table2text.md
@@ -6,10 +6,23 @@ sidebar:
 ---
 
 
-*written on 2021-09-13*
+*written on 2021-09-30*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Towards Reinforcement Learning for Pivot-based Neural Machine  Translation with Non-autoregressive Transformer](http://arxiv.org/abs/2109.13097v1) | Evgeniia Tokarchuk, Jan Rosendahl, Weiyue Wang, Pavel Petrushkov, Tomer Lancewicki, Shahram Khadivi, Hermann Ney | cs.CL | 2021-09-27 |
+| [Incorporating Linguistic Knowledge for Abstractive Multi-document  Summarization](http://arxiv.org/abs/2109.11199v1) | Congbo Ma, Wei Emma Zhang, Hu Wang, Shubham Gupta, Mingyu Guo | cs.CL | 2021-09-23 |
+| [Exploiting Curriculum Learning in Unsupervised Neural Machine  Translation](http://arxiv.org/abs/2109.11177v1) | Jinliang Lu, Jiajun Zhang | cs.CL | 2021-09-23 |
+| [TrOCR: Transformer-based Optical Character Recognition with Pre-trained  Models](http://arxiv.org/abs/2109.10282v3) | Minghao Li, Tengchao Lv, Lei Cui, Yijuan Lu, Dinei Florencio, Cha Zhang, Zhoujun Li, Furu Wei | cs.CL, cs.CV | 2021-09-21 |
+| [Let the CAT out of the bag: Contrastive Attributed explanations for Text](http://arxiv.org/abs/2109.07983v1) | Saneem Chemmengath, Amar Prakash Azad, Ronny Luss, Amit Dhurandhar | cs.CL, cs.AI | 2021-09-16 |
+| [Scaling Laws for Neural Machine Translation](http://arxiv.org/abs/2109.07740v1) | Behrooz Ghorbani, Orhan Firat, Markus Freitag, Ankur Bapna, Maxim Krikun, Xavier Garcia, Ciprian Chelba, Colin Cherry | cs.LG, cs.AI, cs.CL | 2021-09-16 |
+| [On the Limits of Minimal Pairs in Contrastive Evaluation](http://arxiv.org/abs/2109.07465v1) | Jannis Vamvas, Rico Sennrich | cs.CL | 2021-09-15 |
+| [Attention Is Indeed All You Need: Semantically Attention-Guided Decoding  for Data-to-Text NLG](http://arxiv.org/abs/2109.07043v1) | Juraj Juraska, Marilyn Walker | cs.CL, cs.LG | 2021-09-15 |
+| [Compression, Transduction, and Creation: A Unified Framework for  Evaluating Natural Language Generation](http://arxiv.org/abs/2109.06379v1) | Mingkai Deng, Bowen Tan, Zhengzhong Liu, Eric P. Xing, Zhiting Hu | cs.CL, cs.LG | 2021-09-14 |
+| [UniMS: A Unified Framework for Multimodal Summarization with Knowledge  Distillation](http://arxiv.org/abs/2109.05812v1) | Zhengkun Zhang, Xiaojun Meng, Yasheng Wang, Xin Jiang, Qun Liu, Zhenglu Yang | cs.CL | 2021-09-13 |
+| [Perturbation CheckLists for Evaluating NLG Evaluation Metrics](http://arxiv.org/abs/2109.05771v1) | Ananya B. Sai, Tanay Dixit, Dev Yashpal Sheth, Sreyas Mohan, Mitesh M. Khapra | cs.CL | 2021-09-13 |
+| [Zero-Shot Text-to-Speech for Text-Based Insertion in Audio Narration](http://arxiv.org/abs/2109.05426v1) | Chuanxin Tang, Chong Luo, Zhiyuan Zhao, Dacheng Yin, Yucheng Zhao, Wenjun Zeng | cs.SD, cs.AI, eess.AS | 2021-09-12 |
+| [Implicit Premise Generation with Discourse-aware Commonsense Knowledge  Models](http://arxiv.org/abs/2109.05358v1) | Tuhin Chakrabarty, Aadit Trivedi, Smaranda Muresan | cs.CL | 2021-09-11 |
 | [CINS: Comprehensive Instruction for Few-shot Learning in  Task-orientedDialog Systems](http://arxiv.org/abs/2109.04645v1) | Fei Mi, Yitong Li, Yasheng Wang, Xin Jiang, Qun Liu | cs.CL, cs.LG | 2021-09-10 |
 | [Graphine: A Dataset for Graph-aware Terminology Definition Generation](http://arxiv.org/abs/2109.04018v1) | Zequn Liu, Shukai Wang, Yiyang Gu, Ruiyi Zhang, Ming Zhang, Sheng Wang | cs.CL | 2021-09-09 |
 | [Smelting Gold and Silver for Improved Multilingual AMR-to-Text  Generation](http://arxiv.org/abs/2109.03808v1) | Leonardo F. R. Ribeiro, Jonas Pfeiffer, Yue Zhang, Iryna Gurevych | cs.CL | 2021-09-08 |
