--- a/categories/story/_posts/2021-10-06-story.md
+++ b/categories/story/_posts/2021-10-06-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-09-30*
+*written on 2021-10-08*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Cut the CARP: Fishing for zero-shot story evaluation](http://arxiv.org/abs/2110.03111v1) | Shahbuland Matiana, JR Smith, Ryan Teehan, Louis Castricato, Stella Biderman, Leo Gao, Spencer Frazier | cs.CL | 2021-10-06 |
 | [A Plug-and-Play Method for Controlled Text Generation](http://arxiv.org/abs/2109.09707v1) | Damian Pascual, Beni Egressy, Clara Meister, Ryan Cotterell, Roger Wattenhofer | cs.CL, cs.AI | 2021-09-20 |
 | [TVRecap: A Dataset for Generating Stories with Character Descriptions](http://arxiv.org/abs/2109.08833v1) | Mingda Chen, Kevin Gimpel | cs.CL | 2021-09-18 |
 | [The Perils of Using Mechanical Turk to Evaluate Open-Ended Text  Generation](http://arxiv.org/abs/2109.06835v1) | Marzena Karpinska, Nader Akoury, Mohit Iyyer | cs.CL | 2021-09-14 |
