--- a/categories/dialogue/_posts/2021-10-16-dialogue.md
+++ b/categories/dialogue/_posts/2021-10-16-dialogue.md
@@ -6,10 +6,13 @@ sidebar:
 ---
 
 
-*written on 2021-09-30*
+*written on 2021-10-22*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [FrugalScore: Learning Cheaper, Lighter and Faster Evaluation Metricsfor  Automatic Text Generation](http://arxiv.org/abs/2110.08559v1) | Moussa Kamal Eddine, Guokan Shang, Antoine J. -P. Tixier, Michalis Vazirgiannis | cs.CL | 2021-10-16 |
+| [Hindsight: Posterior-guided training of retrievers for improved  open-ended generation](http://arxiv.org/abs/2110.07752v2) | Ashwin Paranjape, Omar Khattab, Christopher Potts, Matei Zaharia, Christopher D. Manning | cs.CL, cs.IR | 2021-10-14 |
+| [Federated Natural Language Generation for Personalized Dialogue System](http://arxiv.org/abs/2110.06419v1) | Yujie Lu, Chao Huang, Huanli Zhan, Yong Zhuang | cs.CL, cs.AI | 2021-10-13 |
 | [OpenViDial 2.0: A Larger-Scale, Open-Domain Dialogue Generation Dataset  with Visual Contexts](http://arxiv.org/abs/2109.12761v2) | Shuhe Wang, Yuxian Meng, Xiaoya Li, Xiaofei Sun, Rongbin Ouyang, Jiwei Li | cs.CL | 2021-09-27 |
 | [An animated picture says at least a thousand words: Selecting Gif-based  Replies in Multimodal Dialog](http://arxiv.org/abs/2109.12212v1) | Xingyao Wang, David Jurgens | cs.CL, cs.CV, cs.CY | 2021-09-24 |
 | [Style Control for Schema-Guided Natural Language Generation](http://arxiv.org/abs/2109.12211v1) | Alicia Y. Tsai, Shereen Oraby, Vittorio Perera, Jiun-Yu Kao, Yuheng Du, Anjali Narayan-Chen, Tagyoung Chung, Dilek Hakkani-Tur | cs.CL | 2021-09-24 |
