--- a/categories/image2text/_posts/2021-10-20-image2text.md
+++ b/categories/image2text/_posts/2021-10-20-image2text.md
@@ -6,10 +6,15 @@ sidebar:
 ---
 
 
-*written on 2021-10-08*
+*written on 2021-10-22*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [SciXGen: A Scientific Paper Dataset for Context-Aware Text Generation](http://arxiv.org/abs/2110.10774v1) | Hong Chen, Hiroya Takamura, Hideki Nakayama | cs.CL | 2021-10-20 |
+| [A Picture is Worth a Thousand Words: A Unified System for Diverse  Captions and Rich Images Generation](http://arxiv.org/abs/2110.09756v1) | Yupan Huang, Bei Liu, Jianlong Fu, Yutong Lu | cs.CV, cs.CL, cs.MM | 2021-10-19 |
+| [Unifying Multimodal Transformer for Bi-directional Image and Text  Generation](http://arxiv.org/abs/2110.09753v1) | Yupan Huang, Hongwei Xue, Bei Liu, Yutong Lu | cs.CV, cs.CL, cs.MM | 2021-10-19 |
+| [Self-Annotated Training for Controllable Image Captioning](http://arxiv.org/abs/2110.08446v1) | Zhangzi Zhu, Tianlei Wang, Hong Qu | cs.AI, cs.CV | 2021-10-16 |
+| [How Well Do You Know Your Audience? Reader-aware Question Generation](http://arxiv.org/abs/2110.08445v1) | Ian Stewart, Rada Mihalcea | cs.CL, I.7 | 2021-10-16 |
 | [CLIP-Forge: Towards Zero-Shot Text-to-Shape Generation](http://arxiv.org/abs/2110.02624v1) | Aditya Sanghi, Hang Chu, Joseph G. Lambourne, Ye Wang, Chin-Yi Cheng, Marco Fumero | cs.CV, cs.AI, 68T07, I.2.10 | 2021-10-06 |
 | [CIDEr-R: Robust Consensus-based Image Description Evaluation](http://arxiv.org/abs/2109.13701v1) | Gabriel Oliveira dos Santos, Esther Luna Colombini, Sandra Avila | cs.CV, cs.CL | 2021-09-28 |
 | [Weakly Supervised Contrastive Learning for Chest X-Ray Report Generation](http://arxiv.org/abs/2109.12242v1) | An Yan, Zexue He, Xing Lu, Jiang Du, Eric Chang, Amilcare Gentili, Julian McAuley, Chun-Nan Hsu | cs.CL | 2021-09-25 |
