--- a/categories/table2text/_posts/2021-10-20-table2text.md
+++ b/categories/table2text/_posts/2021-10-20-table2text.md
@@ -6,10 +6,25 @@ sidebar:
 ---
 
 
-*written on 2021-10-08*
+*written on 2021-10-22*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [An Open Natural Language Processing Development Framework for EHR-based  Clinical Research: A case demonstration using the National COVID Cohort  Collaborative (N3C)](http://arxiv.org/abs/2110.10780v1) | Sijia Liu, Andrew Wen, Liwei Wang, Huan He, Sunyang Fu, Robert Miller, Andrew Williams, Daniel Harris, Ramakanth Kavuluru, Mei Liu, Noor Abu-el-rub, Rui Zhang, John D. Osborne, Masoud Rouhizadeh, Yongqun He, Emily Pfaff, Christopher G. Chute, Tim Duong, Melissa A. Haendel, Rafael Fuentes, Peter Szolovits, Hua Xu, Hongfang Liu | cs.CL, cs.IR | 2021-10-20 |
+| [SciXGen: A Scientific Paper Dataset for Context-Aware Text Generation](http://arxiv.org/abs/2110.10774v1) | Hong Chen, Hiroya Takamura, Hideki Nakayama | cs.CL | 2021-10-20 |
+| [Privacy in Open Search: A Review of Challenges and Solutions](http://arxiv.org/abs/2110.10720v1) | Samuel Sousa, Roman Kern, Christian Guetl | cs.CR, cs.AI, cs.IR | 2021-10-20 |
+| [Permutation invariant graph-to-sequence model for template-free  retrosynthesis and reaction prediction](http://arxiv.org/abs/2110.09681v1) | Zhengkai Tu, Connor W. Coley | cs.LG | 2021-10-19 |
+| [Improving Compositional Generalization with Self-Training for  Data-to-Text Generation](http://arxiv.org/abs/2110.08467v1) | Sanket Vaibhav Mehta, Jinfeng Rao, Yi Tay, Mihir Kale, Ankur Parikh, Hongtao Zhong, Emma Strubell | cs.CL, cs.AI | 2021-10-16 |
+| [How Well Do You Know Your Audience? Reader-aware Question Generation](http://arxiv.org/abs/2110.08445v1) | Ian Stewart, Rada Mihalcea | cs.CL, I.7 | 2021-10-16 |
+| [Open Domain Question Answering over Virtual Documents: A Unified  Approach for Data and Text](http://arxiv.org/abs/2110.08417v1) | Kaixin Ma, Hao Cheng, Xiaodong Liu, Eric Nyberg, Jianfeng Gao | cs.CL, cs.AI | 2021-10-16 |
+| [Control Prefixes for Text Generation](http://arxiv.org/abs/2110.08329v1) | Jordan Clive, Kris Cao, Marek Rei | cs.CL, cs.AI, cs.LG | 2021-10-15 |
+| [Cross-Domain Data Integration for Named Entity Disambiguation in  Biomedical Text](http://arxiv.org/abs/2110.08228v1) | Maya Varma, Laurel Orr, Sen Wu, Megan Leszczynski, Xiao Ling, Christopher Ré | cs.CL, cs.AI | 2021-10-15 |
+| [MReD: A Meta-Review Dataset for Controllable Text Generation](http://arxiv.org/abs/2110.07474v1) | Chenhui Shen, Liying Cheng, Ran Zhou, Lidong Bing, Yang You, Luo Si | cs.CL | 2021-10-14 |
+| [Rethinking Self-Supervision Objectives for Generalizable Coherence  Modeling](http://arxiv.org/abs/2110.07198v1) | Prathyusha Jwalapuram, Shafiq Joty, Xiang Lin | cs.CL | 2021-10-14 |
+| [Federated Natural Language Generation for Personalized Dialogue System](http://arxiv.org/abs/2110.06419v1) | Yujie Lu, Chao Huang, Huanli Zhan, Yong Zhuang | cs.CL, cs.AI | 2021-10-13 |
+| [Learning Compact Metrics for MT](http://arxiv.org/abs/2110.06341v1) | Amy Pu, Hyung Won Chung, Ankur P. Parikh, Sebastian Gehrmann, Thibault Sellam | cs.CL | 2021-10-12 |
+| [DiscoDVT: Generating Long Text with Discourse-Aware Discrete Variational  Transformer](http://arxiv.org/abs/2110.05999v1) | Haozhe Ji, Minlie Huang | cs.CL | 2021-10-12 |
+| [Yuan 1.0: Large-Scale Pre-trained Language Model in Zero-Shot and  Few-Shot Learning](http://arxiv.org/abs/2110.04725v2) | Shaohua Wu, Xudong Zhao, Tong Yu, Rongguo Zhang, Chong Shen, Hongli Liu, Feng Li, Hong Zhu, Jiangang Luo, Liang Xu, Xuanwei Zhang | cs.CL, cs.AI | 2021-10-10 |
 | [Cut the CARP: Fishing for zero-shot story evaluation](http://arxiv.org/abs/2110.03111v1) | Shahbuland Matiana, JR Smith, Ryan Teehan, Louis Castricato, Stella Biderman, Leo Gao, Spencer Frazier | cs.CL | 2021-10-06 |
 | [CLIP-Forge: Towards Zero-Shot Text-to-Shape Generation](http://arxiv.org/abs/2110.02624v1) | Aditya Sanghi, Hang Chu, Joseph G. Lambourne, Ye Wang, Chin-Yi Cheng, Marco Fumero | cs.CV, cs.AI, 68T07, I.2.10 | 2021-10-06 |
 | [Simulated annealing for optimization of graphs and sequences](http://arxiv.org/abs/2110.01384v1) | Xianggen Liu, Pengyong Li, Fandong Meng, Hao Zhou, Huasong Zhong, Jie Zhou, Lili Mou, Sen Song | cs.LG, cs.AI | 2021-10-01 |
