--- a/categories/games/_posts/2021-10-27-games.md
+++ b/categories/games/_posts/2021-10-27-games.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-03-13*
+*written on 2021-11-11*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Dynamic population-based meta-learning for multi-agent communication  with natural language](http://arxiv.org/abs/2110.14241v1) | Abhinav Gupta, Marc Lanctot, Angeliki Lazaridou | cs.LG, cs.AI, cs.CL, cs.MA | 2021-10-27 |
 | [Hurdles to Progress in Long-form Question Answering](http://arxiv.org/abs/2103.06332v1) | Kalpesh Krishna, Aurko Roy, Mohit Iyyer | cs.CL, cs.LG | 2021-03-10 |
 | [Deep Learning for General Game Playing with Ludii and Polygames](http://arxiv.org/abs/2101.09562v1) | Dennis J. N. J. Soemers, Vegard Mella, Cameron Browne, Olivier Teytaud | cs.AI | 2021-01-23 |
 | [Ludii Game Logic Guide](http://arxiv.org/abs/2101.02120v1) | Eric Piette, Cameron Browne, Dennis J. N. J. Soemers | cs.AI | 2021-01-06 |
