--- a/categories/table2text/_posts/2021-11-24-table2text.md
+++ b/categories/table2text/_posts/2021-11-24-table2text.md
@@ -6,10 +6,18 @@ sidebar:
 ---
 
 
-*written on 2021-11-11*
+*written on 2021-11-26*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Octree Transformer: Autoregressive 3D Shape Generation on Hierarchically  Structured Sequences](http://arxiv.org/abs/2111.12480v1) | Moritz Ibing, Gregor Kobsik, Leif Kobbelt | cs.CV, cs.GR, cs.LG | 2021-11-24 |
+| [Selection of pseudo-annotated data for adverse drug reaction  classification across drug groups](http://arxiv.org/abs/2111.12477v1) | Ilseyar Alimova, Elena Tutubalina | cs.CL, cs.LG | 2021-11-24 |
+| [NÜWA: Visual Synthesis Pre-training for Neural visUal World creAtion](http://arxiv.org/abs/2111.12417v1) | Chenfei Wu, Jian Liang, Lei Ji, Fan Yang, Yuejian Fang, Daxin Jiang, Nan Duan | cs.CV, cs.AI | 2021-11-24 |
+| [Reinforcement Learning for Few-Shot Text Generation Adaptation](http://arxiv.org/abs/2111.11030v1) | Cheng Pengsen, Dai Jinqiao, Liu Jiayong | cs.CL | 2021-11-22 |
+| [RDF-to-Text Generation with Reinforcement Learning Based Graph-augmented  Structural Neural Encoders](http://arxiv.org/abs/2111.10545v1) | Hanning Gao, Lingfei Wu, Po Hu, Zhihua Wei, Fangli Xu, Bo Long | cs.CL, cs.AI | 2021-11-20 |
+| [How much do language models copy from their training data? Evaluating  linguistic novelty in text generation using RAVEN](http://arxiv.org/abs/2111.09509v1) | R. Thomas McCoy, Paul Smolensky, Tal Linzen, Jianfeng Gao, Asli Celikyilmaz | cs.CL | 2021-11-18 |
+| [MEDCOD: A Medically-Accurate, Emotive, Diverse, and Controllable Dialog  System](http://arxiv.org/abs/2111.09381v1) | Rhys Compton, Ilya Valmianski, Li Deng, Costa Huang, Namit Katariya, Xavier Amatriain, Anitha Kannan | cs.CL, cs.AI, cs.LG | 2021-11-17 |
+| [Entropy optimized semi-supervised decomposed vector-quantized  variational autoencoder model based on transfer learning for multiclass text  classification and generation](http://arxiv.org/abs/2111.08453v1) | Shivani Malhotra, Vinay Kumar, Alpana Agarwal | cs.LG, cs.IT, math.IT | 2021-11-10 |
 | [Explaining Face Presentation Attack Detection Using Natural Language](http://arxiv.org/abs/2111.04862v1) | Hengameh Mirzaalian, Mohamed E. Hussein, Leonidas Spinoulas, Jonathan May, Wael Abd-Almageed | cs.CV, cs.AI, cs.CL, cs.CR | 2021-11-08 |
 | [Unsupervised and Distributional Detection of Machine-Generated Text](http://arxiv.org/abs/2111.02878v1) | Matthias Gallé, Jos Rozen, Germán Kruszewski, Hady Elsahar | cs.CL, cs.IR | 2021-11-04 |
 | [Recent Advances in Natural Language Processing via Large Pre-Trained  Language Models: A Survey](http://arxiv.org/abs/2111.01243v1) | Bonan Min, Hayley Ross, Elior Sulem, Amir Pouran Ben Veyseh, Thien Huu Nguyen, Oscar Sainz, Eneko Agirre, Ilana Heinz, Dan Roth | cs.CL, cs.AI, cs.LG | 2021-11-01 |
