--- a/categories/story/_posts/2021-12-01-story.md
+++ b/categories/story/_posts/2021-12-01-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-11-26*
+*written on 2021-12-05*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Mutltimodal AI Companion for Interactive Fairytale Co-creation](http://arxiv.org/abs/2112.00331v1) | Ruiyang Liu, Predrag K. Nikolic | cs.MM | 2021-12-01 |
 | [Exploring Story Generation with Multi-task Objectives in Variational  Autoencoders](http://arxiv.org/abs/2111.08133v1) | Zhuohan Xie, Trevor Cohn, Jey Han Lau | cs.CL, cs.LG | 2021-11-15 |
 | [A Novel Corpus of Discourse Structure in Humans and Computers](http://arxiv.org/abs/2111.05940v1) | Babak Hemmatian, Sheridan Feucht, Rachel Avram, Alexander Wey, Muskaan Garg, Kate Spitalnic, Carsten Eickhoff, Ellie Pavlick, Bjorn Sandstede, Steven Sloman | cs.CL | 2021-11-10 |
 | [DiscoDVT: Generating Long Text with Discourse-Aware Discrete Variational  Transformer](http://arxiv.org/abs/2110.05999v1) | Haozhe Ji, Minlie Huang | cs.CL | 2021-10-12 |
