--- a/categories/dialogue/_posts/2021-12-23-dialogue.md
+++ b/categories/dialogue/_posts/2021-12-23-dialogue.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-12-18*
+*written on 2021-12-29*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Measuring Attribution in Natural Language Generation Models](http://arxiv.org/abs/2112.12870v1) | Hannah Rashkin, Vitaly Nikolaev, Matthew Lamm, Michael Collins, Dipanjan Das, Slav Petrov, Gaurav Singh Tomar, Iulia Turc, David Reitter | cs.CL | 2021-12-23 |
 | [Taming Repetition in Dialogue Generation](http://arxiv.org/abs/2112.08657v1) | Yadong Xi, Jiashu Pu, Xiaoxi Mao | cs.CL | 2021-12-16 |
 | [DG2: Data Augmentation Through Document Grounded Dialogue Generation](http://arxiv.org/abs/2112.08342v1) | Qingyang Wu, Song Feng, Derek Chen, Sachindra Joshi, Luis A. Lastras, Zhou Yu | cs.CL | 2021-12-15 |
 | [Dynamic Human Evaluation for Relative Model Comparisons](http://arxiv.org/abs/2112.08048v1) | Thórhildur Thorleiksdóttir, Cedric Renggli, Nora Hollenstein, Ce Zhang | cs.CL | 2021-12-15 |
