--- a/categories/table2text/_posts/2022-01-14-table2text.md
+++ b/categories/table2text/_posts/2022-01-14-table2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2022-01-09*
+*written on 2022-01-24*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [A Survey of Pretrained Language Models Based Text Generation](http://arxiv.org/abs/2201.05273v1) | Junyi Li, Tianyi Tang, Wayne Xin Zhao, Jian-Yun Nie, Ji-Rong Wen | cs.CL | 2022-01-14 |
 | [YACLC: A Chinese Learner Corpus with Multidimensional Annotation](http://arxiv.org/abs/2112.15043v1) | Yingying Wang, Cunliang Kong, Liner Yang, Yijun Wang, Xiaorong Lu, Renfen Hu, Shan He, Zhenghao Liu, Yun Chen, Erhong Yang, Maosong Sun | cs.CL | 2021-12-30 |
 | [A Preliminary Study for Literary Rhyme Generation based on Neuronal  Representation, Semantics and Shallow Parsing](http://arxiv.org/abs/2112.13241v1) | Luis-Gil Moreno-Jiménez, Juan-Manuel Torres-Moreno, Roseli S. Wedemann | cs.CL, cs.AI | 2021-12-25 |
 | [Counterfactual Memorization in Neural Language Models](http://arxiv.org/abs/2112.12938v1) | Chiyuan Zhang, Daphne Ippolito, Katherine Lee, Matthew Jagielski, Florian Tramèr, Nicholas Carlini | cs.CL, cs.AI, cs.LG | 2021-12-24 |
