--- a/categories/poetry/_posts/2022-01-18-poetry.md
+++ b/categories/poetry/_posts/2022-01-18-poetry.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-11-26*
+*written on 2022-01-24*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Youling: an AI-Assisted Lyrics Creation System](http://arxiv.org/abs/2201.06724v1) | Rongsheng Zhang, Xiaoxi Mao, Le Li, Lin Jiang, Lin Chen, Zhiwei Hu, Yadong Xi, Changjie Fan, Minlie Huang | cs.CL | 2022-01-18 |
 | [Say What? Collaborative Pop Lyric Generation Using Multitask Transfer  Learning](http://arxiv.org/abs/2111.07592v1) | Naveen Ram, Tanay Gummadi, Rahul Bhethanabotla, Richard J. Savery, Gil Weinberg | cs.CL, cs.HC, cs.LG, I.2.7 | 2021-11-15 |
 | [SP-GPT2: Semantics Improvement in Vietnamese Poetry Generation](http://arxiv.org/abs/2110.15723v1) | Tuan Nguyen, Hanh Pham, Truong Bui, Tan Nguyen, Duc Luong, Phong Nguyen | cs.CL, cs.AI, cs.LG | 2021-10-10 |
 | [The Perils of Using Mechanical Turk to Evaluate Open-Ended Text  Generation](http://arxiv.org/abs/2109.06835v1) | Marzena Karpinska, Nader Akoury, Mohit Iyyer | cs.CL | 2021-09-14 |
