--- a/categories/story/_posts/2022-01-18-story.md
+++ b/categories/story/_posts/2022-01-18-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-12-18*
+*written on 2022-01-24*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Inferring Commonsense Explanations as Prompts for Future Event  Generation](http://arxiv.org/abs/2201.07099v1) | Li Lin, Yixin Cao, Lifu Huang, Shuang Li, Xuming Hu, Lijie Wen, Jianmin Wang | cs.CL, cs.LG, I.2.7; I.2.4 | 2022-01-18 |
 | [Guiding Neural Story Generation with Reader Models](http://arxiv.org/abs/2112.08596v1) | Xiangyu Peng, Kaige Xie, Amal Alabdulkarim, Harshith Kayam, Samihan Dani, Mark O. Riedl | cs.CL | 2021-12-16 |
 | [Goal-Directed Story Generation: Augmenting Generative Language Models  with Reinforcement Learning](http://arxiv.org/abs/2112.08593v1) | Amal Alabdulkarim, Winston Li, Lara J. Martin, Mark O. Riedl | cs.CL, cs.AI | 2021-12-16 |
 | [TopNet: Learning from Neural Topic Model to Generate Long Stories](http://arxiv.org/abs/2112.07259v1) | Yazheng Yang, Boyuan Pan, Deng Cai, Huan Sun | cs.LG, cs.CL | 2021-12-14 |
