--- a/categories/dialogue/_posts/2022-02-08-dialogue.md
+++ b/categories/dialogue/_posts/2022-02-08-dialogue.md
@@ -6,10 +6,14 @@ sidebar:
 ---
 
 
-*written on 2021-12-29*
+*written on 2022-02-11*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Survey of Hallucination in Natural Language Generation](http://arxiv.org/abs/2202.03629v1) | Ziwei Ji, Nayeon Lee, Rita Frieske, Tiezheng Yu, Dan Su, Yan Xu, Etsuko Ishii, Yejin Bang, Andrea Madotto, Pascale Fung | cs.CL, A.1 | 2022-02-08 |
+| [Red Teaming Language Models with Language Models](http://arxiv.org/abs/2202.03286v1) | Ethan Perez, Saffron Huang, Francis Song, Trevor Cai, Roman Ring, John Aslanides, Amelia Glaese, Nat McAleese, Geoffrey Irving | cs.CL, cs.AI, cs.CR, cs.LG | 2022-02-07 |
+| [A Survey on Retrieval-Augmented Text Generation](http://arxiv.org/abs/2202.01110v1) | Huayang Li, Yixuan Su, Deng Cai, Yan Wang, Lemao Liu | cs.CL | 2022-02-02 |
+| [Language Generation for Broad-Coverage, Explainable Cognitive Systems](http://arxiv.org/abs/2201.10422v1) | Marjorie McShane, Ivan Leon | cs.CL, cs.AI | 2022-01-25 |
 | [Measuring Attribution in Natural Language Generation Models](http://arxiv.org/abs/2112.12870v1) | Hannah Rashkin, Vitaly Nikolaev, Matthew Lamm, Michael Collins, Dipanjan Das, Slav Petrov, Gaurav Singh Tomar, Iulia Turc, David Reitter | cs.CL | 2021-12-23 |
 | [Taming Repetition in Dialogue Generation](http://arxiv.org/abs/2112.08657v1) | Yadong Xi, Jiashu Pu, Xiaoxi Mao | cs.CL | 2021-12-16 |
 | [DG2: Data Augmentation Through Document Grounded Dialogue Generation](http://arxiv.org/abs/2112.08342v1) | Qingyang Wu, Song Feng, Derek Chen, Sachindra Joshi, Luis A. Lastras, Zhou Yu | cs.CL | 2021-12-15 |
