--- a/categories/dialogue/_posts/2020-12-29-dialogue.md
+++ b/categories/dialogue/_posts/2020-12-29-dialogue.md
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 
-*written on 2021-01-22*
+*written on 2022-12-21*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
@@ -111,3 +111,4 @@ sidebar:
 | [Towards Automated Generation of Scripted Dialogue: Some Time-Honoured  Strategies](http://arxiv.org/abs/cs/0312051v1) | Paul Piwek, Kees van Deemter | cs.CL, cs.AI, I.2.7 | 2003-12-22 |
 | [A Flexible Pragmatics-driven Language Generator for Animated Agents](http://arxiv.org/abs/cs/0312050v1) | Paul Piwek | cs.CL, cs.MM, I.2.7 | 2003-12-22 |
 
+				[Next >]({{site.url}}categories/dialogue/2021/05/28/dialogue.html)
