--- a/categories/image2text/_posts/2020-09-28-image2text.md
+++ b/categories/image2text/_posts/2020-09-28-image2text.md
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 
-*written on 2021-01-22*
+*written on 2022-12-21*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
@@ -111,3 +111,4 @@ sidebar:
 | [Building a Generation Knowledge Source using Internet-Accessible  Newswire](http://arxiv.org/abs/cmp-lg/9702014v1) | Dragomir R. Radev, Kathleen R. McKeown | cmp-lg, cs.CL | 1997-02-25 |
 | [Domain and Language Independent Feature Extraction for Statistical Text  Categorization](http://arxiv.org/abs/cmp-lg/9607003v1) | Thomas Bayer, Ingrid Renz, Michael Stein, Ulrich Kressel | cmp-lg, cs.CL | 1996-07-02 |
 
+				[Next >]({{site.url}}categories/image2text/2021/11/20/image2text.html)
